--- a/app/views/book/main.erb
+++ b/app/views/book/main.erb
@@ -9,7 +9,7 @@
         <div class="panel panel-default">
           <div class="panel-body">
             
-            <img onmouseover="bigImg(this)" onmouseout="normalImg(this)" border="0" src="http://www.hindiquotes.co.in/wp-content/uploads/2015/09/54cbd8653d000.jpg" alt="Smiley" width="32" height="32">
+            <!--<img onmouseover="bigImg(this)" onmouseout="normalImg(this)" border="0" src="http://www.hindiquotes.co.in/wp-content/uploads/2015/09/54cbd8653d000.jpg" alt="Smiley" width="32" height="32">-->
             
             <h2>R E S E R V A T I O N</h2> 
             <hr>
@@ -53,54 +53,19 @@
 
 
 <!--혜선-->
-<!--//   $(function() {-->
-            
-<!--//           $("#icon").mouseover(function(){    -->
-<!--//           $(".building-service").css("border-color", "#0C5838");-->
-<!--//           });-->
-          
-<!--//           $("#icon").mouseleave(function(){    -->
-<!--//           $(".building-service").css("border-color", "#7D6F81");-->
-<!--//           });                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                -->
 
-<!--//   });-->
-
-<!--<script> -->
-<!--    $(document).ready(function(){-->
-<!--        $("#icon").mouseover(function(){-->
-<!--            $(".icon_").animate({-->
-<!--                height: 'toggle'-->
-<!--            });-->
-<!--        });-->
-<!--    });-->
-<!--</script> -->
-
-
-
-            <script>
-              function bigImg(x) {
-                  x.style.height = "64px";
-                  x.style.width = "64px";
-              }
+            <!--<script>-->
+            <!--  function bigImg(x) {-->
+            <!--      x.style.height = "64px";-->
+            <!--      x.style.width = "64px";-->
+            <!--  }-->
               
-              function normalImg(x) {
-                  x.style.height = "32px";
-                  x.style.width = "32px";
-              }
-            </script>
-        
-
-    
-              <!--<script>-->
-              
-              <!--$("#<%#=b.en_name%>").mouseover(function(){-->
-              <!--  $("#hi").show(500);-->
-              <!--}-->
-              
-              <!--// $("#%=b.en_name%>").mouseover(function(){    -->
-              <!--//     $("#%=b.en_name%>").style("background-color", "#0C5838");-->
-              <!--//     });-->
-              <!--</script>-->
+            <!--  function normalImg(x) {-->
+            <!--      x.style.height = "32px";-->
+            <!--      x.style.width = "32px";-->
+            <!--  }-->
+            <!--</script>-->
+      
                           
                           
                           
