--- a/app/views/freeboard/upload.erb
+++ b/app/views/freeboard/upload.erb
@@ -57,11 +57,7 @@
       
     <div class="col-md-2 col-md-xs-2" id="menu_font">
       
-      <div class="alert alert-danger alert-dismissible" role="alert" style="margin-right:30px">
-        <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-         혹시 조건에 맞는 강의실을 찾고싶으세요?<br><br>
-         <a href="/book/searching?searching_scale=0&searching_building=선택안함"><button type="button" class="btn btn-default">강의실 검색 바로가기</button></a>
-      </div>
+      <%= render "book/side" %>
       
     </div>
     
